<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/news_article_image"
            android:id="@+id/imageNews"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:src="@drawable/sample"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageNews"
            android:paddingStart="12dp"
            android:paddingTop="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="6dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/sample_title" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTextView"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingTop="6dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="6dp"
            android:textColor="#757575"
            android:textStyle="bold"
            tools:text="@string/dummyText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingTop="6dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="6dp"
            android:layout_below="@id/descriptionTextView"
            android:orientation="horizontal">

            <Button
                android:id="@+id/read"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColor="@color/read"
                android:textSize="18sp"
                android:background="@android:color/transparent"
                android:textAlignment="textStart"
                android:text="@string/read"/>

            <ImageButton
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:paddingBottom="8dp"
                android:paddingTop="12dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_menu_share"
                android:contentDescription="@string/news_article_image" />

            <ImageButton
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:paddingBottom="8dp"
                android:paddingTop="12dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_file_download_black_24dp"
                android:contentDescription="@string/news_article_image" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>